lunarflow/08-ingress.yaml
# RabbitMQ Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: lunarflow
spec:
  ingressClassName: traefik
  rules:
  - host: rabbitmq.luxdomain.work
    http:
      paths:
      - backend:
          service:
            name: rabbitmq
            port:
              number: 15672
        path: /
        pathType: Prefix

# PGAdmin Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: pgadmin.luxdomain.work
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              number: 80
        path: /
        pathType: Prefix
