lunarflow/09-ingress.yaml
# RabbitMQ Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: lunarflow
spec:
  ingressClassName: traefik
  rules:
  - host: rabbitmq.luxdomain.lan
    http:
      paths:
      - backend:
          service:
            name: rabbitmq
            port:
              number: 15672
        path: /
        pathType: Prefix
# PGAdmin Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: lunarflow
spec:
  ingressClassName: traefik
  rules:
  - host: pgadmin.luxdomain.lan
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              number: 80
        path: /
        pathType: Prefix
# Traefik Dashboard Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.luxdomain.lan
    http:
      paths:
      - backend:
          service:
            name: traefik-service
            port: 
              number: 8080
        path: /
        pathType: Prefix
